Created methods for exchanging Spotify access code for access token. Wrote methods for fetching data with access token. Downloaded custom font and added it to tailwind.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -14,6 +14,13 @@
   }
 }
 
+@font-face {
+	font-family: "NiceBounce";
+	src: url("fonts/NiceBounce.otf");
+	font-weight: normal;
+	font-style: normal;
+}
+
 body {
   color: var(--foreground);
   background: var(--background);
