currentPlaylist.tsx and artistTopTracks.tsx now scroll independently from main page scroll. Scroll position on these elements maintain on page refresh

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -29,6 +29,14 @@
 	font-style: normal;
 }
 
+
+@layer utilities {
+	.no-scrollbar {
+		scrollbar-width: none;
+	}
+}
+
+
 body {
   color: hsl(160, 90%, 55%);
   background: hsl(340, 60%, 8%);
