Added media queries. Found hamburger menu icons.

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,18 @@
   --foreground: #171717;
 }
 
+@media (max-width: 770) {
+	html {
+		font-size: 12px;
+	}
+}
+
+@media (max-width: 450px) {
+	html {
+		font-size: 10px;
+	}
+}
+
 @media (prefers-color-scheme: dark) {
   :root {
     --background: #0a0a0a;
