--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,44 +1,52 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
-:root {
-  --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (max-width: 770) {
-	html {
-		font-size: 12px;
-	}
-}
-
-@media (max-width: 450px) {
-	html {
-		font-size: 10px;
-	}
-}
-
-@media (prefers-color-scheme: dark) {
+@layer utilities {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #ffffff;
+    --foreground: #171717;
+  }
+
+  @media (max-width: 770) {
+    html {
+      font-size: 12px;
+    }
+  }
+
+  @media (max-width: 450px) {
+    html {
+      font-size: 10px;
+    }
+  }
+
+  @media (prefers-color-scheme: dark) {
+    :root {
+      --background: #0a0a0a;
+      --foreground: #ededed;
+    }
+  }
+
+  @font-face {
+    font-family: 'NiceBounce';
+    src: url('fonts/NiceBounce.otf');
+    font-weight: normal;
+    font-style: normal;
+  }
+
+  @font-face {
+    font-family: 'TropiLand';
+    src: url('fonts/TropiLand.ttf');
+    font-weight: normal;
+    font-style: normal;
   }
 }
 
-@font-face {
-	font-family: "NiceBounce";
-	src: url("fonts/NiceBounce.otf");
-	font-weight: normal;
-	font-style: normal;
-}
-
-
-@font-face {
-	font-family: "TropiLand";
-	src: url("fonts/TropiLand.ttf");
-	font-weight: normal;
-	font-style: normal;
+@theme {
+	--color-background: "var(--background)";
+	--color-foreground: "var(--foreground)";
+	--color-headerColor: hsl(12, 100%, 55%);
+	--color-textColor: hsl(52, 100%, 85%);
+	--font-bounce: "NiceBounce", "Geist-MonoVF", sans-serif;
+	--font-tropiLand: "Tropiland", "Geist-MonoVF", sans-serif;
 }
 
 
