--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@
 	--color-hamburgerOverlay: hsl(268, 70%, 12%);
 	--color-headerColor: hsl(12, 100%, 55%);
 	--color-textColor: hsl(52, 100%, 85%);
+	--color-alternativeColor: hsl(342, 100%, 45%);
 	--font-bounce: "NiceBounce", "Geist-MonoVF", sans-serif;
 	--font-tropiLand: "Tropiland", "Geist-MonoVF", sans-serif;
 }
